# claude-provider-proxy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
claude_provider_proxy/: __init__.py  app.py  config.py  main.py  providers.py  proxy_core.py  translate_openai.py
config/: providers.example.json
docs/: A2A-INTEGRATION.md  API.md  PROFILES.md  PROVIDERS.md  SECURITY.md  TRANSLATION.md  TROUBLESHOOTING.md
examples/: curl_examples.sh
examples/profiles/groq/: default.env.example
examples/profiles/openrouter/: classic.env.example  deepseek.env.example  kimi.env.example  qwen.env.example
tests/: test_translate.py
