[project]
name = "claude-provider-proxy"
version = "0.2.0"
description = "One local proxy to run Claude Code against any model backend (OpenCode Go/Zen, NVIDIA, or your own), with per-provider profiles."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = ["fastapi>=0.109", "uvicorn>=0.27", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/caseol/claude-provider-proxy"

[tool.setuptools]
packages = ["claude_provider_proxy"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
